# Part_III_Project

./: .gitignore  README.md  pyproject.toml
.github/formatting/: preamble.tex
.github/sync/: google_doc_sync.py
.github/workflows/: manual-tests.yml  notebook2pdf.yml  planningSync.yml
Part_III_Project/: __init__.py  sea_surface_height.py
notebook/: Code notes.md  Literature.md  Progress.md  Thoughts.md
notebooks/: Sea Level to Sea Surface.ipynb
outputs/: refs.bib
outputs/report/: report.tex
outputs/report/parts/: frontmatter.tex  introduction.tex  previous_methods.tex  titles.tex
scratch pads/: scratch.ipynb
src/Part_III_Project/: __init__.py  load_generators.py  plot_methods.py  sea_surface_height.py  sea_surface_height_change.py
tests/: test_plot_methods.py  test_sea_surface_height_change.py
tmp/: Sea Level to Sea Surface.ipynb  scratch.ipynb
work/: Sea Level to Sea Surface.ipynb  Sea Level to Sea Surface.py
work/exploration/: Sea Level to Sea Surface.ipynb  random_fields.ipynb
work/traditional_methods/: load_lat.ipynb  load_lat.py  load_lat_error_output.csv  ternary.ipynb  ternary50-70.ipynb  ternary50-70.py  ternary_sea_surface_height_error.csv  ternary_sea_surface_height_error_large.csv  traditional_method_errors.csv  traditional_methods.ipynb  traditional_methods.py  traditional_methods_ternary.py
work/traditional_methods/best_case/: load_lat.ipynb  ternary.ipynb  ternary.py  ternary50-70.ipynb  traditional_method_errors.csv  (+1 more)
work_da/: random_fields2.py
work_log/: Code notes.md  Introduction.md  Progress.md  Thoughts.md
(+3 files in other folders)
