[project]
name = "Part_III_Project"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Holland",email = "101332229+0thomasholland@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyslfp (>=1.0.8,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.0.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "mpltern (>=1.0.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "Part_III_Project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
